# bc-lifehash

./: .gitignore  CLA.md  Makefile.in  Package.swift  README.md  build.sh  build_wasm.sh  config.h.in  configure  configure.ac  tasks.sh
.github/workflows/: ci.yml
CLA-signed/: CLA.gorazdko.41F0EA1699A74C1E2FA41B538CF96BC3FF9DBBCE.asc  CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
SwiftPublicHeaders/: lifehash.h
src/: Makefile.in  bit-aggregator.cpp  bit-aggregator.hpp  bit-enumerator.cpp  bit-enumerator.hpp  cell-grid.cpp  cell-grid.hpp  change-grid.hpp  color-func.cpp  color-func.hpp  color-grid.cpp  color-grid.hpp  color.cpp  color.hpp  data.hpp  format-utils.cpp  format-utils.hpp  frac-grid.hpp  gradients.cpp  gradients.hpp  grid.hpp  hex.cpp  hex.hpp  hsb-color.cpp  hsb-color.hpp  lifehash.cpp  lifehash.h  lifehash.hpp  memzero.cpp  memzero.hpp  numeric.hpp  patterns.cpp  patterns.hpp  point.cpp  point.hpp  sha256.cpp  sha256.hpp  size.hpp  version.hpp
src/include/: lifehash.h
test/: Makefile.in  test.cpp  testc.c
wasm/: build.sh  lifehash.d.ts  lifehash.js  lifehash.post.js  lifehash.types.ts  lifehash.wasm
